// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing <App/> Main Menu Showing and Hiding Menu 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu 2`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Holder View Should Be Visible & Enabled 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  style={
    Object {
      "backgroundColor": "#000000",
      "height": 1131,
      "opacity": 0.75,
      "position": "absolute",
      "width": 523,
      "zIndex": 2,
    }
  }
  testID="v-holder"
/>
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Initial Holder View Should Be Hidden & Disabled 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
  style={
    Object {
      "backgroundColor": "#000000",
      "height": 1131,
      "opacity": 0,
      "position": "absolute",
      "width": 523,
      "zIndex": 2,
    }
  }
  testID="v-holder"
/>
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Initial Menu View Should Be Hidden 1`] = `
<View
  style={
    Object {
      "height": 38,
      "minWidth": 38,
      "zIndex": 5,
    }
  }
  testID="v-menu"
>
  <View
    style={
      Object {
        "backgroundColor": "#414141",
        "borderRadius": 15,
        "height": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 15,
        "top": -5,
        "width": 246.5,
        "zIndex": 4,
      }
    }
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "marginRight": 20,
        "minWidth": 38,
        "zIndex": 5,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Main Menu Showing and Hiding Menu: Menu View Should Be Visible 1`] = `
<View
  style={
    Object {
      "height": 38,
      "minWidth": 38,
      "zIndex": 5,
    }
  }
  testID="v-menu"
>
  <View
    style={
      Object {
        "backgroundColor": "#414141",
        "borderRadius": 15,
        "height": 735.15,
        "opacity": 1,
        "position": "absolute",
        "right": 15,
        "top": -5,
        "width": 493,
        "zIndex": 4,
      }
    }
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "marginRight": 20,
        "minWidth": 38,
        "zIndex": 5,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Navigation Views 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Navigation Views: Initial Navigation View Should Be Inbox 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="v-navigation"
>
  <View
    active={true}
    pointerEvents="box-none"
    style={
      Object {
        "height": "100%",
        "opacity": 1,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-inbox"
  />
  <View
    active={false}
    pointerEvents="none"
    style={
      Object {
        "height": "100%",
        "opacity": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-discover"
  />
</View>
`;

exports[`Testing <App/> Navigation Views: Navigation View Should Be Discover 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="v-navigation"
>
  <View
    active={false}
    pointerEvents="none"
    style={
      Object {
        "height": "100%",
        "opacity": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-inbox"
  />
  <View
    active={true}
    pointerEvents="box-none"
    style={
      Object {
        "height": "100%",
        "opacity": 1,
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="v-discover"
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (No Bottom Sheet) 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Testing <App/> Search Bar Search Bar Width (No Bottom Sheet): Initial Search Bar Should Be Minimized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 38,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 38,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 0,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;

exports[`Testing <App/> Search Bar Search Bar Width (No Bottom Sheet): Search Bar Should Be Maximized 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "height": 38,
      "marginLeft": 15,
      "marginRight": 15,
      "minWidth": 38,
      "width": 429,
    }
  }
  testID="v-search"
>
  <View
    style={
      Object {
        "backgroundColor": "#4B4B4B",
        "borderRadius": 38,
        "height": 38,
        "position": "absolute",
        "width": 429,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="rgba(255,255,255,0.45)"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "height": 38,
        "marginRight": 15,
        "position": "absolute",
        "right": 0,
        "width": 367,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "borderRadius": 38,
        "height": 38,
        "width": 38,
        "zIndex": 0,
      }
    }
  />
</View>
`;
